--- a/statistics.html
+++ b/statistics.html
@@ -103,7 +103,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<h5><a href='https://www.mathjobs.org/jobs/jobs/14174'>Mount Holyoke College, Department of Mathematics and Statistics </a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.mathjobs.org/jobs/jobs/14174'>Mount Holyoke College, Department of Mathematics and Statistics </a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
@@ -123,7 +123,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://uis.applytojob.com/apply/'>UNESCO Institute for Statistics - Career Page</a></h5> 
+<h5><a href='http://uis.applytojob.com/apply/'>UNESCO Institute for Statistics - Career Page</a></h5> 
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -135,7 +135,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='http://studygroupuk.applytojob.com/apply/s76rdno9aa/Business-Management-Economics-Or-Statistics-Tutor'>Business & Management, Economics or Statistics Tutor - Study Group - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://studygroupuk.applytojob.com/apply/s76rdno9aa/Business-Management-Economics-Or-Statistics-Tutor'>Business & Management, Economics or Statistics Tutor - Study Group - Career Page</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -165,7 +165,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">North America United States</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/statistical-programmer-31535'>Statistical Programmer - Syneos Health Careers</a></h5> 
+<h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/statistical-programmer-31535'>Statistical Programmer - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America United States</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -267,7 +267,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-biostatistician-31421'>Sr Biostatistician - Syneos Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-biostatistician-31421'>Sr Biostatistician - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America United States  North America United States  North America United States  North America United States</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
@@ -375,7 +375,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/sr-statistical-programmer-client-dedicated-31304'>Sr Statistical Programmer - Client Dedicated - Syneos Health Careers</a></h5> 
+<h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/sr-statistical-programmer-client-dedicated-31304'>Sr Statistical Programmer - Client Dedicated - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America United States</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -399,7 +399,7 @@ some instances. Statistical expertise in data management, analysis of panel data
 <p><span class="badge badge-light">Australia</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/7892862283'>Statistics & Data Corporation (SDC) - Jobs: Senior Clinical Programmer - Apply online</a></h5> 
+<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/7892862283'>Statistics & Data Corporation (SDC) - Jobs: Senior Clinical Programmer - Apply online</a></h5> 
 <p><span class="badge badge-light">Telangana, India</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -469,11 +469,11 @@ Statistician (Health) for Centers for Medicare &amp; Medicaid Services [CMS] in 
 <p><span class="badge badge-light">North America United States  North America United States  North America United States  North America United States</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/senior-biostatistician-home-or-office-based-eu-31242'>Senior Biostatistician - Home or Office based EU - Syneos Health Careers</a></h5> 
+<h5><a href='https://incresearch.referrals.selectminds.com/jobs/senior-biostatistician-home-or-office-based-eu-31242'>Senior Biostatistician - Home or Office based EU - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">Barcelona Italy</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/chegg/job/oYL4afwH'>Chegg Careers - Content Lead - Statistics</a></h5> 
+<h5><a href='https://jobs.jobvite.com/chegg/job/oYL4afwH'>Chegg Careers - Content Lead - Statistics</a></h5> 
 <p><span class="badge badge-light">New Delhi, India</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
